clean up LP test and begin working on land with new county shp

--- a/scripts/biomass_preprocessing.ipynb
+++ b/scripts/biomass_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -361,21 +361,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read in CA CENSUS TRACTS shapefile\n"
+      "read in CA COUNTIES shapefile\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1246f9e10>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# now load SHAPEFILE for all CA COUNTIES to merge this\n",
-    "print(\"read in CA CENSUS TRACTS shapefile\")\n",
-    "CAct = gpd.read_file(\"data/raw/tl_2018_06_tract/tl_2018_06_tract.shp\")"
+    "print(\"read in CA COUNTIES shapefile\")\n",
+    "CA = gpd.read_file(\"data/raw/CA_Counties/CA_Counties_TIGER2016.shp\")\n",
+    "CA.plot()"
    ]
   },
   {
@@ -395,16 +406,12 @@
     }
    ],
    "source": [
-    "#CAct.groupby(['COUNTYFP'])\n",
-    "# create subset of just COUNTIES\n",
-    "CA = CAct.drop_duplicates('COUNTYFP').copy()\n",
-    "\n",
-    "type(CA)"
+    "# type(CA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,11 +437,16 @@
        "      <th></th>\n",
        "      <th>STATEFP</th>\n",
        "      <th>COUNTYFP</th>\n",
-       "      <th>TRACTCE</th>\n",
+       "      <th>COUNTYNS</th>\n",
        "      <th>GEOID</th>\n",
        "      <th>NAME</th>\n",
        "      <th>NAMELSAD</th>\n",
+       "      <th>LSAD</th>\n",
+       "      <th>CLASSFP</th>\n",
        "      <th>MTFCC</th>\n",
+       "      <th>CSAFP</th>\n",
+       "      <th>CBSAFP</th>\n",
+       "      <th>METDIVFP</th>\n",
        "      <th>FUNCSTAT</th>\n",
        "      <th>ALAND</th>\n",
        "      <th>AWATER</th>\n",
@@ -446,125 +458,157 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5134</th>\n",
+       "      <th>53</th>\n",
        "      <td>06</td>\n",
-       "      <td>115</td>\n",
-       "      <td>040500</td>\n",
-       "      <td>06115040500</td>\n",
-       "      <td>405</td>\n",
-       "      <td>Census Tract 405</td>\n",
-       "      <td>G5020</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2488138</td>\n",
-       "      <td>0</td>\n",
-       "      <td>+39.1003755</td>\n",
-       "      <td>-121.5535692</td>\n",
-       "      <td>POLYGON ((-121.563114 39.113103, -121.562864 3...</td>\n",
-       "      <td>POINT (-121.553569677685 39.10037590416454)</td>\n",
+       "      <td>081</td>\n",
+       "      <td>00277305</td>\n",
+       "      <td>06081</td>\n",
+       "      <td>San Mateo</td>\n",
+       "      <td>San Mateo County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>488</td>\n",
+       "      <td>41860</td>\n",
+       "      <td>41884</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1161658961</td>\n",
+       "      <td>757412213</td>\n",
+       "      <td>+37.4146633</td>\n",
+       "      <td>-122.3715451</td>\n",
+       "      <td>POLYGON ((-13646335.91187001 4521323.746708268...</td>\n",
+       "      <td>POINT (-13620576.61254652 4500160.133383474)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5136</th>\n",
+       "      <th>54</th>\n",
        "      <td>06</td>\n",
-       "      <td>109</td>\n",
-       "      <td>003200</td>\n",
-       "      <td>06109003200</td>\n",
-       "      <td>32</td>\n",
-       "      <td>Census Tract 32</td>\n",
-       "      <td>G5020</td>\n",
-       "      <td>S</td>\n",
-       "      <td>392330193</td>\n",
-       "      <td>1104193</td>\n",
-       "      <td>+37.9292989</td>\n",
-       "      <td>-120.0887219</td>\n",
-       "      <td>POLYGON ((-120.303512 37.879226, -120.303473 3...</td>\n",
-       "      <td>POINT (-120.1023301768437 37.93045103857123)</td>\n",
+       "      <td>093</td>\n",
+       "      <td>00277311</td>\n",
+       "      <td>06093</td>\n",
+       "      <td>Siskiyou</td>\n",
+       "      <td>Siskiyou County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>A</td>\n",
+       "      <td>16261974847</td>\n",
+       "      <td>179108278</td>\n",
+       "      <td>+41.5879861</td>\n",
+       "      <td>-122.5332868</td>\n",
+       "      <td>POLYGON ((-13677924.00259712 5161573.733656177...</td>\n",
+       "      <td>POINT (-13641131.482284 5100360.431008819)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6151</th>\n",
+       "      <th>55</th>\n",
        "      <td>06</td>\n",
-       "      <td>091</td>\n",
-       "      <td>010000</td>\n",
-       "      <td>06091010000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Census Tract 100</td>\n",
-       "      <td>G5020</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2468694587</td>\n",
-       "      <td>23299110</td>\n",
-       "      <td>+39.5769252</td>\n",
-       "      <td>-120.5219926</td>\n",
-       "      <td>POLYGON ((-121.058203 39.537043, -121.058158 3...</td>\n",
-       "      <td>POINT (-120.5159963784338 39.58040010160451)</td>\n",
+       "      <td>087</td>\n",
+       "      <td>00277308</td>\n",
+       "      <td>06087</td>\n",
+       "      <td>Santa Cruz</td>\n",
+       "      <td>Santa Cruz County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>488</td>\n",
+       "      <td>42100</td>\n",
+       "      <td>None</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1152967330</td>\n",
+       "      <td>419570389</td>\n",
+       "      <td>+37.0124883</td>\n",
+       "      <td>-122.0072050</td>\n",
+       "      <td>POLYGON ((-13605100.48999848 4469147.1572919, ...</td>\n",
+       "      <td>POINT (-13582080.9552777 4442146.137370988)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6719</th>\n",
+       "      <th>56</th>\n",
        "      <td>06</td>\n",
-       "      <td>011</td>\n",
-       "      <td>000200</td>\n",
-       "      <td>06011000200</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Census Tract 2</td>\n",
-       "      <td>G5020</td>\n",
-       "      <td>S</td>\n",
-       "      <td>215944601</td>\n",
-       "      <td>879693</td>\n",
-       "      <td>+39.1863472</td>\n",
-       "      <td>-122.0259049</td>\n",
-       "      <td>POLYGON ((-122.153726 39.276385, -122.14982 39...</td>\n",
-       "      <td>POINT (-122.0334066537139 39.18968677996752)</td>\n",
+       "      <td>021</td>\n",
+       "      <td>00277275</td>\n",
+       "      <td>06021</td>\n",
+       "      <td>Glenn</td>\n",
+       "      <td>Glenn County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3403104376</td>\n",
+       "      <td>33749275</td>\n",
+       "      <td>+39.6025462</td>\n",
+       "      <td>-122.4016998</td>\n",
+       "      <td>POLYGON ((-13680158.03494936 4814470.617666174...</td>\n",
+       "      <td>POINT (-13624650.76309824 4807799.345999167)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6878</th>\n",
+       "      <th>57</th>\n",
        "      <td>06</td>\n",
-       "      <td>049</td>\n",
-       "      <td>000300</td>\n",
-       "      <td>06049000300</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Census Tract 3</td>\n",
-       "      <td>G5020</td>\n",
-       "      <td>S</td>\n",
-       "      <td>6124362193</td>\n",
-       "      <td>467098814</td>\n",
-       "      <td>+41.6379522</td>\n",
-       "      <td>-120.6933431</td>\n",
-       "      <td>POLYGON ((-121.28119 41.704399, -121.281179 41...</td>\n",
-       "      <td>POINT (-120.6935672058963 41.61857324661622)</td>\n",
+       "      <td>079</td>\n",
+       "      <td>00277304</td>\n",
+       "      <td>06079</td>\n",
+       "      <td>San Luis Obispo</td>\n",
+       "      <td>San Luis Obispo County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>None</td>\n",
+       "      <td>42020</td>\n",
+       "      <td>None</td>\n",
+       "      <td>A</td>\n",
+       "      <td>8548640337</td>\n",
+       "      <td>815490673</td>\n",
+       "      <td>+35.3852242</td>\n",
+       "      <td>-120.4475445</td>\n",
+       "      <td>POLYGON ((-13490260.15243948 4272335.748360178...</td>\n",
+       "      <td>POINT (-13408759.60289406 4216796.820212255)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     STATEFP COUNTYFP TRACTCE        GEOID NAME          NAMELSAD  MTFCC  \\\n",
-       "5134      06      115  040500  06115040500  405  Census Tract 405  G5020   \n",
-       "5136      06      109  003200  06109003200   32   Census Tract 32  G5020   \n",
-       "6151      06      091  010000  06091010000  100  Census Tract 100  G5020   \n",
-       "6719      06      011  000200  06011000200    2    Census Tract 2  G5020   \n",
-       "6878      06      049  000300  06049000300    3    Census Tract 3  G5020   \n",
+       "   STATEFP COUNTYFP  COUNTYNS  GEOID             NAME                NAMELSAD  \\\n",
+       "53      06      081  00277305  06081        San Mateo        San Mateo County   \n",
+       "54      06      093  00277311  06093         Siskiyou         Siskiyou County   \n",
+       "55      06      087  00277308  06087       Santa Cruz       Santa Cruz County   \n",
+       "56      06      021  00277275  06021            Glenn            Glenn County   \n",
+       "57      06      079  00277304  06079  San Luis Obispo  San Luis Obispo County   \n",
        "\n",
-       "     FUNCSTAT       ALAND     AWATER     INTPTLAT      INTPTLON  \\\n",
-       "5134        S     2488138          0  +39.1003755  -121.5535692   \n",
-       "5136        S   392330193    1104193  +37.9292989  -120.0887219   \n",
-       "6151        S  2468694587   23299110  +39.5769252  -120.5219926   \n",
-       "6719        S   215944601     879693  +39.1863472  -122.0259049   \n",
-       "6878        S  6124362193  467098814  +41.6379522  -120.6933431   \n",
+       "   LSAD CLASSFP  MTFCC CSAFP CBSAFP METDIVFP FUNCSTAT        ALAND     AWATER  \\\n",
+       "53   06      H1  G4020   488  41860    41884        A   1161658961  757412213   \n",
+       "54   06      H1  G4020  None   None     None        A  16261974847  179108278   \n",
+       "55   06      H1  G4020   488  42100     None        A   1152967330  419570389   \n",
+       "56   06      H1  G4020  None   None     None        A   3403104376   33749275   \n",
+       "57   06      H1  G4020  None  42020     None        A   8548640337  815490673   \n",
        "\n",
-       "                                               geometry  \\\n",
-       "5134  POLYGON ((-121.563114 39.113103, -121.562864 3...   \n",
-       "5136  POLYGON ((-120.303512 37.879226, -120.303473 3...   \n",
-       "6151  POLYGON ((-121.058203 39.537043, -121.058158 3...   \n",
-       "6719  POLYGON ((-122.153726 39.276385, -122.14982 39...   \n",
-       "6878  POLYGON ((-121.28119 41.704399, -121.281179 41...   \n",
+       "       INTPTLAT      INTPTLON  \\\n",
+       "53  +37.4146633  -122.3715451   \n",
+       "54  +41.5879861  -122.5332868   \n",
+       "55  +37.0124883  -122.0072050   \n",
+       "56  +39.6025462  -122.4016998   \n",
+       "57  +35.3852242  -120.4475445   \n",
        "\n",
-       "                                            cocent  \n",
-       "5134   POINT (-121.553569677685 39.10037590416454)  \n",
-       "5136  POINT (-120.1023301768437 37.93045103857123)  \n",
-       "6151  POINT (-120.5159963784338 39.58040010160451)  \n",
-       "6719  POINT (-122.0334066537139 39.18968677996752)  \n",
-       "6878  POINT (-120.6935672058963 41.61857324661622)  "
+       "                                             geometry  \\\n",
+       "53  POLYGON ((-13646335.91187001 4521323.746708268...   \n",
+       "54  POLYGON ((-13677924.00259712 5161573.733656177...   \n",
+       "55  POLYGON ((-13605100.48999848 4469147.1572919, ...   \n",
+       "56  POLYGON ((-13680158.03494936 4814470.617666174...   \n",
+       "57  POLYGON ((-13490260.15243948 4272335.748360178...   \n",
+       "\n",
+       "                                          cocent  \n",
+       "53  POINT (-13620576.61254652 4500160.133383474)  \n",
+       "54    POINT (-13641131.482284 5100360.431008819)  \n",
+       "55   POINT (-13582080.9552777 4442146.137370988)  \n",
+       "56  POINT (-13624650.76309824 4807799.345999167)  \n",
+       "57  POINT (-13408759.60289406 4216796.820212255)  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
