--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -33,9 +33,10 @@
    "outputs": [],
    "source": [
     "############################################################\n",
-    "# FUNCTIONS IN THIS SCRIPT\n",
+    "# FUNCTIONS USED IN THIS SCRIPT\n",
     "\n",
-    "# define function to convert into proj in meters\n",
+    "# define function to convert into proj in meters \n",
+    "# (use epsg=26911 for statewide California, can change for others)\n",
     "def epsg_meters(gdf, proj=26911):\n",
     "    g = gdf.copy()\n",
     "    g = g.to_crs(epsg=proj)\n",
@@ -80,7 +81,7 @@
     "csub = c[(c['COUNTY'] == \"Los Angeles\") | (c['COUNTY'] == \"San Diego\")| \n",
     "         (c['COUNTY'] == \"Orange\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
     "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
-    "# csub.head()\n"
+    "# csub.head()"
    ]
   },
   {
@@ -118,23 +119,16 @@
     "\n",
     "# make into dictionary for use in LP solver\n",
     "fdict = dict(zip(fsub['SwisNo'], fsub['cap_m3'])) \n",
+    "\n",
     "# grab dict names for LP solver\n",
     "facnames = get_dict_names(fdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 291,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type C:  <class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CREATE DISTANCE MATRIX #################################\n",
     "\n",
@@ -146,38 +140,32 @@
     "C = list(csub.coord)\n",
     "F = list(fsub.coord)\n",
     "\n",
-    "print(\"type C: \", type(C))\n",
+    "# print(\"type C: \", type(C))\n",
     "\n",
-    "test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "# Test distance_matrix function as dataframe\n",
+    "# test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "# Actually make it as LIST for use in LP\n",
     "cost_distance = list(distance_matrix(C,F))\n",
+    "\n",
+    "# Multiply each calculated distance (m) by 1.4 for DETOUR \n",
+    "cost_distance = [d * 1.4 for d in cost_distance]\n",
     "\n",
     "# cost_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 290,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Los Angeles', 'Orange', 'Imperial', 'San Diego']"
-      ]
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# CHECK distances to make sure they're in the right place?? - this test STILL IN DEGREES!\n",
+    "# CHECK distances to make sure they're in the right place - this test STILL IN DEGREES!\n",
     "# import math\n",
     "# C1 = [-118.57205925,   34.14803912]\n",
     "# F3 = [-117.1805,   32.8622]\n",
     "# distance = math.sqrt( ((C1[0]-F3[0])**2)+((C1[1]-F3[1])**2) )\n",
     "# print(\"distance between cty 1(LA) and fac 3(37AB): \", distance)\n",
-    "conames"
+    "# Checks out! "
    ]
   },
   {
@@ -291,123 +279,7 @@
     }
    ],
    "source": [
-    "print(value(prob.objective)/1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SwisNo</th>\n",
-       "      <th>AcceptedWa</th>\n",
-       "      <th>County</th>\n",
-       "      <th>cap_m3</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>coord</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30-AB-0378</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>Orange</td>\n",
-       "      <td>7645.5500</td>\n",
-       "      <td>POINT (432747.1406806501 3718459.660051197)</td>\n",
-       "      <td>[432747.14068065013, 3718459.6600511973]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19-AR-5584</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>33823.9132</td>\n",
-       "      <td>POINT (382671.2614913691 3775883.912012273)</td>\n",
-       "      <td>[382671.2614913691, 3775883.9120122734]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>37-AB-0011</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>San Diego</td>\n",
-       "      <td>7645.5500</td>\n",
-       "      <td>POINT (483112.2680784503 3636025.025664771)</td>\n",
-       "      <td>[483112.26807845035, 3636025.0256647714]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>13-AA-0095</td>\n",
-       "      <td>Agricultural,Manure</td>\n",
-       "      <td>Imperial</td>\n",
-       "      <td>54803.3024</td>\n",
-       "      <td>POINT (648883.9532824729 3649624.542233068)</td>\n",
-       "      <td>[648883.9532824729, 3649624.5422330676]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>19-AA-1060</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>9174.6600</td>\n",
-       "      <td>POINT (375950.2595991582 3795827.799395056)</td>\n",
-       "      <td>[375950.2595991582, 3795827.7993950555]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        SwisNo           AcceptedWa       County      cap_m3  \\\n",
-       "2   30-AB-0378      Green Materials       Orange   7645.5500   \n",
-       "3   19-AR-5584      Green Materials  Los Angeles  33823.9132   \n",
-       "6   37-AB-0011      Green Materials    San Diego   7645.5500   \n",
-       "10  13-AA-0095  Agricultural,Manure     Imperial  54803.3024   \n",
-       "11  19-AA-1060      Green Materials  Los Angeles   9174.6600   \n",
-       "\n",
-       "                                       geometry  \\\n",
-       "2   POINT (432747.1406806501 3718459.660051197)   \n",
-       "3   POINT (382671.2614913691 3775883.912012273)   \n",
-       "6   POINT (483112.2680784503 3636025.025664771)   \n",
-       "10  POINT (648883.9532824729 3649624.542233068)   \n",
-       "11  POINT (375950.2595991582 3795827.799395056)   \n",
-       "\n",
-       "                                       coord  \n",
-       "2   [432747.14068065013, 3718459.6600511973]  \n",
-       "3    [382671.2614913691, 3775883.9120122734]  \n",
-       "6   [483112.26807845035, 3636025.0256647714]  \n",
-       "10   [648883.9532824729, 3649624.5422330676]  \n",
-       "11   [375950.2595991582, 3795827.7993950555]  "
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fsub.head()\n"
+    "# print(value(prob.objective)/1000)"
    ]
   },
   {
@@ -421,132 +293,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 289,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Status: Optimal\n",
-      "Route_('Chicago',_'Gary') = 4000.0\n",
-      "Route_('Chicago',_'Tempe') = 2000.0\n",
-      "Route_('Cincinatti',_'Albany') = 2000.0\n",
-      "Route_('Cincinatti',_'Houston') = 3000.0\n",
-      "Route_('Kansas_City',_'Houston') = 4000.0\n",
-      "Route_('Kansas_City',_'Tempe') = 2000.0\n",
-      "Route_('Pittsburgh',_'Chicago') = 3000.0\n",
-      "Route_('Pittsburgh',_'Cincinatti') = 2000.0\n",
-      "Route_('Pittsburgh',_'Gary') = 2000.0\n",
-      "Route_('Pittsburgh',_'Kansas_City') = 3000.0\n",
-      "Route_('Youngstown',_'Albany') = 1000.0\n",
-      "Route_('Youngstown',_'Chicago') = 3000.0\n",
-      "Route_('Youngstown',_'Cincinatti') = 3000.0\n",
-      "Route_('Youngstown',_'Kansas_City') = 3000.0\n",
-      "Total Cost of Transportation =  15005.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "The American Steel Problem for the PuLP Modeller\n",
-    "Authors: Antony Phillips, Dr Stuart Mitchell  2007\n",
-    "\"\"\"\n",
+    "# \"\"\"\n",
+    "# The American Steel Problem for the PuLP Modeller\n",
+    "# Authors: Antony Phillips, Dr Stuart Mitchell  2007\n",
+    "# \"\"\"\n",
     "\n",
-    "# Import PuLP modeller functions\n",
-    "from pulp import *\n",
+    "# # Import PuLP modeller functions\n",
+    "# from pulp import *\n",
     "\n",
-    "# List of all the nodes\n",
-    "Nodes = [\"Youngstown\",\n",
-    "         \"Pittsburgh\",\n",
-    "         \"Cincinatti\",\n",
-    "         \"Kansas City\",\n",
-    "         \"Chicago\",\n",
-    "         \"Albany\",\n",
-    "         \"Houston\",\n",
-    "         \"Tempe\",\n",
-    "         \"Gary\"]\n",
+    "# # List of all the nodes\n",
+    "# Nodes = [\"Youngstown\",\n",
+    "#          \"Pittsburgh\",\n",
+    "#          \"Cincinatti\",\n",
+    "#          \"Kansas City\",\n",
+    "#          \"Chicago\",\n",
+    "#          \"Albany\",\n",
+    "#          \"Houston\",\n",
+    "#          \"Tempe\",\n",
+    "#          \"Gary\"]\n",
     "\n",
-    "nodeData = {# NODE        Supply Demand\n",
-    "         \"Youngstown\":    [10000,0],\n",
-    "         \"Pittsburgh\":    [15000,0],\n",
-    "         \"Cincinatti\":    [0,0],\n",
-    "         \"Kansas City\":   [0,0],\n",
-    "         \"Chicago\":       [0,0],\n",
-    "         \"Albany\":        [0,3000],\n",
-    "         \"Houston\":       [0,7000],\n",
-    "         \"Tempe\":         [0,4000],\n",
-    "         \"Gary\":          [0,6000]}\n",
+    "# nodeData = {# NODE        Supply Demand\n",
+    "#          \"Youngstown\":    [10000,0],\n",
+    "#          \"Pittsburgh\":    [15000,0],\n",
+    "#          \"Cincinatti\":    [0,0],\n",
+    "#          \"Kansas City\":   [0,0],\n",
+    "#          \"Chicago\":       [0,0],\n",
+    "#          \"Albany\":        [0,3000],\n",
+    "#          \"Houston\":       [0,7000],\n",
+    "#          \"Tempe\":         [0,4000],\n",
+    "#          \"Gary\":          [0,6000]}\n",
     "\n",
-    "# List of all the arcs\n",
-    "Arcs = [(\"Youngstown\",\"Albany\"),\n",
-    "        (\"Youngstown\",\"Cincinatti\"),\n",
-    "        (\"Youngstown\",\"Kansas City\"),\n",
-    "        (\"Youngstown\",\"Chicago\"),\n",
-    "        (\"Pittsburgh\",\"Cincinatti\"),\n",
-    "        (\"Pittsburgh\",\"Kansas City\"),\n",
-    "        (\"Pittsburgh\",\"Chicago\"),\n",
-    "        (\"Pittsburgh\",\"Gary\"),\n",
-    "        (\"Cincinatti\",\"Albany\"),\n",
-    "        (\"Cincinatti\",\"Houston\"),\n",
-    "        (\"Kansas City\",\"Houston\"),\n",
-    "        (\"Kansas City\",\"Tempe\"),\n",
-    "        (\"Chicago\",\"Tempe\"),\n",
-    "        (\"Chicago\",\"Gary\")]\n",
+    "# # List of all the arcs\n",
+    "# Arcs = [(\"Youngstown\",\"Albany\"),\n",
+    "#         (\"Youngstown\",\"Cincinatti\"),\n",
+    "#         (\"Youngstown\",\"Kansas City\"),\n",
+    "#         (\"Youngstown\",\"Chicago\"),\n",
+    "#         (\"Pittsburgh\",\"Cincinatti\"),\n",
+    "#         (\"Pittsburgh\",\"Kansas City\"),\n",
+    "#         (\"Pittsburgh\",\"Chicago\"),\n",
+    "#         (\"Pittsburgh\",\"Gary\"),\n",
+    "#         (\"Cincinatti\",\"Albany\"),\n",
+    "#         (\"Cincinatti\",\"Houston\"),\n",
+    "#         (\"Kansas City\",\"Houston\"),\n",
+    "#         (\"Kansas City\",\"Tempe\"),\n",
+    "#         (\"Chicago\",\"Tempe\"),\n",
+    "#         (\"Chicago\",\"Gary\")]\n",
     "\n",
-    "arcData = { #      ARC                Cost Min Max\n",
-    "        (\"Youngstown\",\"Albany\"):      [0.5,0,1000],\n",
-    "        (\"Youngstown\",\"Cincinatti\"):  [0.35,0,3000],\n",
-    "        (\"Youngstown\",\"Kansas City\"): [0.45,1000,5000],\n",
-    "        (\"Youngstown\",\"Chicago\"):     [0.375,0,5000],\n",
-    "        (\"Pittsburgh\",\"Cincinatti\"):  [0.35,0,2000],\n",
-    "        (\"Pittsburgh\",\"Kansas City\"): [0.45,2000,3000],\n",
-    "        (\"Pittsburgh\",\"Chicago\"):     [0.4,0,4000],\n",
-    "        (\"Pittsburgh\",\"Gary\"):        [0.45,0,2000],\n",
-    "        (\"Cincinatti\",\"Albany\"):      [0.35,1000,5000],\n",
-    "        (\"Cincinatti\",\"Houston\"):     [0.55,0,6000],\n",
-    "        (\"Kansas City\",\"Houston\"):    [0.375,0,4000],\n",
-    "        (\"Kansas City\",\"Tempe\"):      [0.65,0,4000],\n",
-    "        (\"Chicago\",\"Tempe\"):          [0.6,0,2000],\n",
-    "        (\"Chicago\",\"Gary\"):           [0.12,0,4000]}\n",
+    "# arcData = { #      ARC                Cost Min Max\n",
+    "#         (\"Youngstown\",\"Albany\"):      [0.5,0,1000],\n",
+    "#         (\"Youngstown\",\"Cincinatti\"):  [0.35,0,3000],\n",
+    "#         (\"Youngstown\",\"Kansas City\"): [0.45,1000,5000],\n",
+    "#         (\"Youngstown\",\"Chicago\"):     [0.375,0,5000],\n",
+    "#         (\"Pittsburgh\",\"Cincinatti\"):  [0.35,0,2000],\n",
+    "#         (\"Pittsburgh\",\"Kansas City\"): [0.45,2000,3000],\n",
+    "#         (\"Pittsburgh\",\"Chicago\"):     [0.4,0,4000],\n",
+    "#         (\"Pittsburgh\",\"Gary\"):        [0.45,0,2000],\n",
+    "#         (\"Cincinatti\",\"Albany\"):      [0.35,1000,5000],\n",
+    "#         (\"Cincinatti\",\"Houston\"):     [0.55,0,6000],\n",
+    "#         (\"Kansas City\",\"Houston\"):    [0.375,0,4000],\n",
+    "#         (\"Kansas City\",\"Tempe\"):      [0.65,0,4000],\n",
+    "#         (\"Chicago\",\"Tempe\"):          [0.6,0,2000],\n",
+    "#         (\"Chicago\",\"Gary\"):           [0.12,0,4000]}\n",
     "\n",
-    "# Splits the dictionaries to be more understandable\n",
-    "(supply, demand) = splitDict(nodeData)\n",
-    "(costs, mins, maxs) = splitDict(arcData)\n",
+    "# # Splits the dictionaries to be more understandable\n",
+    "# (supply, demand) = splitDict(nodeData)\n",
+    "# (costs, mins, maxs) = splitDict(arcData)\n",
     "\n",
-    "# Creates the boundless Variables as Integers\n",
-    "vars = LpVariable.dicts(\"Route\",Arcs,None,None,LpInteger)\n",
+    "# # Creates the boundless Variables as Integers\n",
+    "# vars = LpVariable.dicts(\"Route\",Arcs,None,None,LpInteger)\n",
     "\n",
-    "# Creates the upper and lower bounds on the variables\n",
-    "for a in Arcs:\n",
-    "    vars[a].bounds(mins[a], maxs[a])\n",
+    "# # Creates the upper and lower bounds on the variables\n",
+    "# for a in Arcs:\n",
+    "#     vars[a].bounds(mins[a], maxs[a])\n",
     "\n",
-    "# Creates the 'prob' variable to contain the problem data    \n",
-    "prob = LpProblem(\"American Steel Problem\",LpMinimize)\n",
+    "# # Creates the 'prob' variable to contain the problem data    \n",
+    "# prob = LpProblem(\"American Steel Problem\",LpMinimize)\n",
     "\n",
-    "# Creates the objective function\n",
-    "prob += lpSum([vars[a]* costs[a] for a in Arcs]), \"Total Cost of Transport\"\n",
+    "# # Creates the objective function\n",
+    "# prob += lpSum([vars[a]* costs[a] for a in Arcs]), \"Total Cost of Transport\"\n",
     "\n",
-    "# Creates all problem constraints - this ensures the amount going into each node is at least equal to the amount leaving\n",
-    "for n in Nodes:\n",
-    "    prob += (supply[n]+ lpSum([vars[(i,j)] for (i,j) in Arcs if j == n]) >=\n",
-    "             demand[n]+ lpSum([vars[(i,j)] for (i,j) in Arcs if i == n])), \"Steel Flow Conservation in Node %s\"%n\n",
+    "# # Creates all problem constraints - this ensures the amount going into each node is at least equal to the amount leaving\n",
+    "# for n in Nodes:\n",
+    "#     prob += (supply[n]+ lpSum([vars[(i,j)] for (i,j) in Arcs if j == n]) >=\n",
+    "#              demand[n]+ lpSum([vars[(i,j)] for (i,j) in Arcs if i == n])), \"Steel Flow Conservation in Node %s\"%n\n",
     "\n",
-    "# The problem data is written to an .lp file\n",
-    "prob.writeLP(\"AmericanSteelProblem.lp\")\n",
+    "# # The problem data is written to an .lp file\n",
+    "# prob.writeLP(\"AmericanSteelProblem.lp\")\n",
     "\n",
-    "# The problem is solved using PuLP's choice of Solver\n",
-    "prob.solve()\n",
+    "# # The problem is solved using PuLP's choice of Solver\n",
+    "# prob.solve()\n",
     "\n",
-    "# The status of the solution is printed to the screen\n",
-    "print(\"Status:\", LpStatus[prob.status])\n",
+    "# # The status of the solution is printed to the screen\n",
+    "# print(\"Status:\", LpStatus[prob.status])\n",
     "\n",
-    "# Each of the variables is printed with it's resolved optimum value\n",
-    "for v in prob.variables():\n",
-    "    print(v.name, \"=\", v.varValue)\n",
+    "# # Each of the variables is printed with it's resolved optimum value\n",
+    "# for v in prob.variables():\n",
+    "#     print(v.name, \"=\", v.varValue)\n",
     "\n",
-    "# The optimised objective function value is printed to the screen    \n",
-    "print(\"Total Cost of Transportation = \", value(prob.objective))"
+    "# # The optimised objective function value is printed to the screen    \n",
+    "# print(\"Total Cost of Transportation = \", value(prob.objective))"
    ]
   },
   {
