--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MINI TEST\n",
+    "\"\"\"\n",
+    "MINI TEST OF LINEAR PROGRAMMING PULP MODEL\n",
+    "Mini-dicts of counties and facilities,\n",
+    "currently based on 'beer distribution model'\n",
+    ">> need to rewrite CORRECTLY\n",
+    "\"\"\"\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
@@ -37,6 +43,7 @@
     "\n",
     "# define function to convert into proj in meters \n",
     "# (use epsg=26911 for statewide California, can change for others)\n",
+    "# alt is 3857\n",
     "def epsg_meters(gdf, proj=26911):\n",
     "    g = gdf.copy()\n",
     "    g = g.to_crs(epsg=proj)\n",
@@ -170,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +205,7 @@
       "Route_San_Diego_19_AR_5584 = 27072.0\n",
       "Route_San_Diego_30_AB_0378 = 0.0\n",
       "Route_San_Diego_37_AB_0011 = 0.0\n",
-      "Total Cost of Transportation =  50185404022.607956\n"
+      "Total Cost of Transportation =  70259565631.65114\n"
      ]
     }
    ],
